--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,8 +6,10 @@
     </div>
     <div class="col-lg-9 col-xl-8 text-center">
       <p class="lead">{{ .Params.lead | safeHTML }}</p>
-      <a class="btn btn-primary btn-lg px-4 mb-2" href="/docs/{{ if .Site.Params.options.docsVersioning }}{{ .Site.Params.docsVersion }}/{{ end }}prologue/introduction/" role="button">Get Started</a>
-      <p class="meta">Open-source MIT Licensed. <a href="https://github.com/h-enk/doks">GitHub v{{ $data := getJSON "/package.json" }}{{ $data.version }}</a></p>
+      <a class="btn btn-primary btn-lg px-4 mb-2"
+        href="/docs/{{ if .Site.Params.options.docsVersioning }}{{ .Site.Params.docsVersion }}/{{ end }}prologue/introduction/"
+        role="button">Get Started</a>
+      <!-- <p class="meta">Open-source MIT Licensed. <a href="https://github.com/h-enk/doks">GitHub v{{ $data := getJSON "/package.json" }}{{ $data.version }}</a></p> -->
     </div>
   </div>
 </section>
@@ -17,7 +19,7 @@
 <section class="section section-sm">
   <div class="container">
     <div class="row justify-content-center text-center">
-      <div class="col-lg-5">
+      <!-- <div class="col-lg-5">
         <h2 class="h4">Security aware</h2>
         <p>Get A+ scores on <a href="https://observatory.mozilla.org/analyze/doks-child-theme.netlify.app">Mozilla Observatory</a> out of the box. Easily change the default Security Headers to suit your needs.</p>
       </div>
@@ -28,10 +30,10 @@
       <div class="col-lg-5">
         <h2 class="h4">SEO-ready</h2>
         <p>Use sensible defaults for structured data, open graph, and Twitter cards. Or easily change the SEO settings to your liking.</p>
-      </div>
+      </div> -->
     </div>
     <div class="row justify-content-center text-center">
-      <div class="col-lg-5">
+      <!-- <div class="col-lg-5">
         <h2 class="h4">Full text search</h2>
         <p>Search your Doks site with FlexSearch. Easily customize index settings and search options to your liking.</p>
       </div>
@@ -42,7 +44,7 @@
       <div class="col-lg-5">
         <h2 class="h4">Dark mode</h2>
         <p>Switch to a low-light UI with the click of a button. Change colors with variables to match your branding.</p>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
