removed index mention of version

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,8 +9,8 @@
       <a class="btn btn-primary btn-lg px-4 mb-2"
         href="/docs/{{ if .Site.Params.options.docsVersioning }}{{ .Site.Params.docsVersion }}/{{ end }}prologue/introduction/"
         role="button">Get Started</a>
-      <p class="meta">Open-source MIT Licensed. <a href="https://github.com/h-enk/doks">GitHub v{{ $data := getJSON
-          "/package.json" }}{{ $data.version }}</a></p>
+      <!-- <p class="meta">Open-source MIT Licensed. <a href="https://github.com/h-enk/doks">GitHub v{{ $data := getJSON
+          "/package.json" }}{{ $data.version }}</a></p> -->
     </div>
   </div>
 </section>
